fix: speedup preloader, add failsafes, and prevent screen lock on mobile/desktop

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -204,9 +204,11 @@ button {
   transition: visibility 0.8s ease;
 }
 
+.preloader.fade-content,
+.preloader.slide-up,
 .preloader.hidden {
   visibility: hidden;
-  pointer-events: none;
+  pointer-events: none !important;
   display: none !important;
 }
 
